<resources>
    <string name="listen_app_name">Listen</string>
    <string name="listen_my_listen_title">我听</string>
    <string name="listen_tab_recent_listen">收听历史</string>
    <string name="listen_tab_subscription_update">订阅更新</string>
    <string name="listen_my_listen_subs">订阅</string>
    <string name="listen_recent">最近</string>
    <string name="listen_search">搜索</string>

    <string name="listen_my_listen_subs_number">订阅(%s)</string>

    <string name="listen_my_listen_buy">已购</string>
    <string name="listen_my_listen_download">下载</string>
    <string name="listen_my_listen_list">听单</string>


    <string name="listen_set_top">置顶</string>
    <string name="listen_cancel_top">取消置顶</string>
    <string name="listen_share">分享</string>
    <string name="listen_find_similar">找相似</string>
    <string name="listen_unsubscribe">取消订阅</string>
    <string name="listen_delete">删除</string>

    <string name="listen_add_to_book_list">添加到听单</string>
    <string name="listen_create_book_list">+新建听单</string>

    <string name="listen_create_sheet_list">新建听单</string>
    <string name="listen_title_text">标题：</string>
    <string name="listen_input_title">请输入标题</string>
    <string name="listen_sheet_synopsis">听单简介：</string>
    <string name="listen_input_optional">选填</string>


    <string name="listen_subscription_depict">%1s %2s</string>
    <string name="listen_bought">已购</string>
    <string name="listen_my_sheet">我的听单</string>
    <string name="listen_create_sheet">创建的听单</string>
    <string name="listen_collected_sheet">收藏听单</string>
    <string name="listen_subscription">订阅</string>


    <string name="listen_add_success_tip">添加成功,请到我的听单中查看</string>
    <string name="listen_add_fail">添加失败</string>
    <string name="listen_edit_fail">编辑失败</string>
    <string name="listen_edit_success_tip">修改成功,请到我的听单中查看</string>
    <string name="listen_input_char_tip">不能输入特殊字符</string>
    <string name="listen_input_no_null_tip">听单名称不能为空</string>
    <string name="listen_input_length_tip">长度不能大于20</string>
    <string name="listen_add_success">添加成功</string>
    <string name="listen_edit_sheet">编辑听单</string>
    <string name="listen_set_top_fail">置顶失败</string>
    <string name="listen_set_top_success">置顶成功</string>
    <string name="listen_cancel_top_fail">取消置顶失败</string>
    <string name="listen_cancel_top_success">取消置顶成功</string>
    <string name="listen_create_success">创建成功</string>
    <string name="listen_create_failure">创建失败</string>
    <string name="listen_book_prefix">共</string>
    <string name="listen_book_suffix">本</string>


    <string name="listen_know">我知道了</string>
    <string name="listen_goto_look">去看看</string>
    <string name="listen_add_success_content">可在“我听-听单”中查看</string>
    <string name="listen_max_sub_num">99+</string>
    <string name="listen_sheet_no_data">此听单还没内容，快去添加一个吧！</string>
    <string name="listen_sheet_quilt_delete">书单书籍已被作者删除～</string>

    <string name="listen_delete_content">确定清除所有的播放记录</string>
    <string name="listen_delete_listen_finish">仅删除已听完</string>
    <string name="listen_no_listen_data">暂无内容更新</string>
    <string name="listen_no_listen_record">最近很懒，没有听过书哦</string>
    <string name="listen_subscription_empty">订阅列表还是空的，赶紧去订阅点什么吧</string>
    <string name="listen_not_buy_book">暂未购买书籍内容</string>
    <string name="listen_max_num">99+</string>
    <string name="listen_not_collect_now">暂无收藏</string>
    <string name="listen_content_offline">该内容已下架</string>
    <string name="listen_delete_and_not_collect">该听单已被作者删除，是否取消收藏？</string>
    <string name="listen_content_ill">该听单因存在违规内容已被系统屏蔽，是否取消收藏？</string>
    <string name="listen_think_a_letter">再想想</string>
    <string name="listen_delete_the_listen_list">确认删除该听单？</string>
    <string name="listen_edit_success">编辑成功</string>
    <string name="listen_remove_offline_book">该书籍已下架，是否移除？</string>
    <string name="listen_remove_book">移除</string>
    <string name="listen_not_remove_book">不移除</string>
    <string name="listen_list_ill_is_delete">该听单因存在违规内容已被系统屏蔽，是否删除</string>
    <string name="listen_author_ill">该听单已被作者删除，是否删除？</string>
</resources>