<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.rm.module_listen.viewmodel.ListenSubscriptionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_8"
        android:paddingBottom="@dimen/dp_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:background="@drawable/business_shape_round_ffffff_14dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/listen_dialog_bottom_subscription_cancel">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/listen_dialog_bottom_subscription_top"
                style="@style/BusinessTextStyleFirst_2"
                android:layout_width="match_parent"
                android:gravity="center"
                android:onClick="@{()->viewModel.dialogSetTopFun()}"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:text="@string/listen_set_top" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5pt"
                android:background="@color/business_color_e8e8e8" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/listen_dialog_bottom_subscription_share"
                style="@style/BusinessTextStyleFirst_2"
                android:layout_width="match_parent"
                android:gravity="center"
                android:onClick="@{()->viewModel.dialogShareFun()}"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:text="@string/listen_share" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5pt"
                android:background="@color/business_color_e8e8e8" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/listen_dialog_bottom_subscription_find_similar"
                style="@style/BusinessTextStyleFirst_2"
                android:layout_width="match_parent"
                android:gravity="center"
                android:onClick="@{()->viewModel.dialogFindSimilarFun()}"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:text="@string/listen_find_similar"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5pt"
                android:background="@color/business_color_e8e8e8"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/listen_dialog_bottom_subscription_unsubscribe"
                style="@style/BusinessTextStyleFirst_2"
                android:layout_width="match_parent"
                android:gravity="center"
                android:onClick="@{()->viewModel.dialogUnsubscribeFun()}"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:text="@string/listen_unsubscribe"
                android:textColor="@color/business_color_ff5e5e" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/listen_dialog_bottom_subscription_cancel"
            style="@style/BusinessTextStyleFirst_2"
            android:layout_width="match_parent"
            android:background="@drawable/business_shape_round_ffffff_14dp"
            android:gravity="center"
            android:onClick="@{()->viewModel.dialogCancelFun()}"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:text="@string/business_cancel"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>