<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource">

    <data>

        <variable
            name="viewModel"
            type="com.rm.module_listen.viewmodel.ListenMyListenViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/listenMyListenTitle"
            style="@style/BusinessTextStyleFirst_0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/listen_my_listen_title"
            android:layout_marginTop="12dp"
            android:textSize="20sp"
            android:layout_height="40dp"/>

        <LinearLayout
            android:id="@+id/listenMyListenHeadLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/listenMyListenTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/ListenTopCl"
                android:id="@+id/listenSubCl"
                >
                <View
                    android:id="@+id/listenSubBgView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/ListenTopBgView"/>
                <androidx.appcompat.widget.AppCompatImageView
                    app:layout_constraintTop_toTopOf="@+id/listenSubBgView"
                    app:layout_constraintStart_toStartOf="@+id/listenSubBgView"
                    app:layout_constraintEnd_toEndOf="@+id/listenSubBgView"
                    app:layout_constraintBottom_toBottomOf="@+id/listenSubBgView"
                    android:src="@drawable/listen_icon_subscription"
                    style="@style/ListenTopIcon"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/ListenTopText"
                    android:text="@string/listen_my_listen_subs"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/ListenTopCl"
                android:id="@+id/listenDownloadCl"
                >
                <View
                    android:id="@+id/listenDownloadBgView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/ListenTopBgView"/>
                <androidx.appcompat.widget.AppCompatImageView
                    app:layout_constraintTop_toTopOf="@+id/listenDownloadBgView"
                    app:layout_constraintStart_toStartOf="@+id/listenDownloadBgView"
                    app:layout_constraintEnd_toEndOf="@+id/listenDownloadBgView"
                    app:layout_constraintBottom_toBottomOf="@+id/listenDownloadBgView"
                    android:src="@drawable/listen_icon_download"
                    style="@style/ListenTopIcon"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/ListenTopText"
                    android:text="@string/listen_my_listen_download"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/ListenTopCl"
                android:id="@+id/listenBuyCl"
                >
                <View
                    android:id="@+id/listenBuyBgView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/ListenTopBgView"/>
                <androidx.appcompat.widget.AppCompatImageView
                    app:layout_constraintTop_toTopOf="@+id/listenBuyBgView"
                    app:layout_constraintStart_toStartOf="@+id/listenBuyBgView"
                    app:layout_constraintEnd_toEndOf="@+id/listenBuyBgView"
                    app:layout_constraintBottom_toBottomOf="@+id/listenBuyBgView"
                    android:src="@drawable/listen_icon_buy"
                    style="@style/ListenTopIcon"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/ListenTopText"
                    android:text="@string/listen_my_listen_buy"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/ListenTopCl"
                android:id="@+id/listenListCl"
                >
                <View
                    android:id="@+id/listenListBgView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/ListenTopBgView"/>
                <androidx.appcompat.widget.AppCompatImageView
                    app:layout_constraintTop_toTopOf="@+id/listenListBgView"
                    app:layout_constraintStart_toStartOf="@+id/listenListBgView"
                    app:layout_constraintEnd_toEndOf="@+id/listenListBgView"
                    app:layout_constraintBottom_toBottomOf="@+id/listenListBgView"
                    android:src="@drawable/listen_icon_list"
                    style="@style/ListenTopIcon"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/ListenTopText"
                    android:text="@string/listen_my_listen_list"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <com.rm.business_lib.wedgit.radiotab.RadioTabLayout
            android:id="@+id/listenMyListenRtl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/listenMyListenHeadLl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/listenMyListenVp" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/listenMyListenVp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_14"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/listenMyListenRtl"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>