<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="dialogViewModel"
            type="com.rm.module_listen.viewmodel.ListenDialogCreateSheetViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/listen_dialog_create_sheet_layout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_margin="8dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/base_shape_round_ffffff_16dp"
            android:elevation="6dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/listen_dialog_create_sheet_progress"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="2dp"
                android:indeterminateDrawable="@drawable/shape_base_tip_loading"
                android:rotation="90"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/listen_dialog_create_sheet_tip"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginTop="15dp"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="1"
                android:textColor="@color/base_ff5e5e"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/business_shape_white_top_radius_12dp"
            android:paddingBottom="@dimen/dp_141"
            app:layout_constraintBottom_toBottomOf="parent">

            <View
                android:id="@+id/listen_dialog_create_sheet_top_drag_line"
                style="@style/BusinessTopDragLine"
                android:layout_marginTop="@dimen/dp_10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/listen_dialog_create_sheet_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:onClick="@{()->dialogViewModel.clickCancelFun()}"
                android:paddingStart="@dimen/dp_16"
                android:paddingTop="@dimen/dp_14"
                android:paddingEnd="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_14"
                android:text="@string/business_cancel"
                android:textColor="@color/business_text_color_333333"
                android:textSize="@dimen/business_text_size_16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listen_dialog_create_sheet_top_drag_line" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/listen_dialog_create_sheet_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listen_create_sheet_list"
                android:textColor="@color/business_color_0f0f0f"
                android:textSize="@dimen/business_text_size_18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/listen_dialog_create_sheet_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/listen_dialog_create_sheet_cancel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/listen_dialog_create_sheet_sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{dialogViewModel.inputText.length()>0}"
                android:onClick="@{()->dialogViewModel.clickSureFun()}"
                android:paddingStart="@dimen/dp_16"
                android:paddingTop="@dimen/dp_14"
                android:paddingEnd="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_14"
                android:text="@string/business_sure"
                android:textColor="@{dialogViewModel.inputText.length()>0?@color/business_color_ff5e5e:@color/business_color_e8e8e8}"
                android:textSize="@dimen/business_text_size_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/listen_dialog_create_sheet_cancel" />


            <View
                android:id="@+id/listen_dialog_create_sheet_line"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/business_color_e8e8e8"
                app:layout_constraintTop_toBottomOf="@id/listen_dialog_create_sheet_cancel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/listen_dialog_create_sheet_text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/listen_title_text"
                android:textColor="@color/business_text_color_666666"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listen_dialog_create_sheet_line" />

            <EditText
                android:id="@+id/listen_dialog_create_sheet_edit_name"
                afterTextChanged="@{dialogViewModel.checkInput}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_marginEnd="@dimen/dp_16"
                android:background="@drawable/business_shape_stroke_e8e8e8_8dp"
                android:hint="@string/listen_input_title"
                android:focusable="true"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="@dimen/dp_12"
                android:paddingEnd="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_12"
                android:textCursorDrawable="@drawable/login_shape_cursor_ff5e5e"
                android:textSize="@dimen/business_text_size_14sp"
                app:layout_constraintTop_toBottomOf="@id/listen_dialog_create_sheet_text_name" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/listen_dialog_create_sheet_text_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/listen_sheet_synopsis"
                android:textColor="@color/business_text_color_666666"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listen_dialog_create_sheet_edit_name" />

            <EditText
                android:id="@+id/listen_dialog_create_sheet_edit_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_marginEnd="@dimen/dp_16"
                android:background="@drawable/business_shape_stroke_e8e8e8_8dp"
                android:gravity="start|top"
                android:hint="@string/listen_input_optional"
                android:minHeight="@dimen/dp_110"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="@dimen/dp_12"
                android:paddingEnd="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_12"
                android:textCursorDrawable="@drawable/login_shape_cursor_ff5e5e"
                android:textSize="@dimen/business_text_size_14sp"
                app:layout_constraintTop_toBottomOf="@id/listen_dialog_create_sheet_text_synopsis" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>